--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@
     transform: scale3d(1, 1, 1);
   }
 } */
+
 :root {
   --main-font: 'Roboto', sans-serif;
   --font-logo: 'Raleway', sans-serif;
@@ -36,7 +37,7 @@
   --hover-color: #2196f3;
   --background-color: #f5f4fa;
   --icon-color: #afb1b8;
-  --transition-duration-250ms: 250ms; /* Сделано для проверки применения свойства путем увеличения,например до 2500ms */
+  --transition-duration-250ms: 2500ms; /* Сделано для проверки применения свойства путем увеличения,например до 2500ms */
   --cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -222,7 +223,7 @@ img {
 
 /*                                         Студия */
 
-/* Hero */
+/*                       Hero */
 .hero {
   max-width: 1600px;
   height: 600px;
@@ -256,14 +257,13 @@ img {
   color: var(--main-write-color);
 }
 .hero-button {
-  display: inline-block;
   min-width: 200px;
-
   padding-top: 10px;
   padding-right: 32px;
   padding-bottom: 10px;
   padding-left: 32px;
 
+  border-width: 0;
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
@@ -274,6 +274,8 @@ img {
 
   background-color: var(--hover-color);
   color: var(--main-write-color);
+  cursor: pointer;
+  outline: none;
 
   transition: background-color var(--transition-duration-250ms)
     var(--cubic-bezier);
@@ -729,7 +731,8 @@ img {
   margin-right: 10px;
 }
 
-.footer-social-item > a:hover {
+.footer-social-item > a:hover,
+.footer-social-item > a:focus {
   background-color: var(--hover-color);
 }
 .footer-form {
@@ -783,4 +786,64 @@ img {
   width: 24px;
   height: 24px;
   fill: var(--main-write-color);
+}
+/*                               Модальное окно */
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+  padding-left: 40px;
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  text-align: center;
+
+  background-color: var(--main-background-color);
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+/* Подключение Аннимации на Модальное окно */
+@keyframes scale {
+  from {
+    transform: scale3d(0, 0, 0);
+  }
+
+  50% {
+    transform: scale3d(0.5, 0.5, 0.5);
+  }
+
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+/* Анимация Модального окна */
+.is-hidden.animate-modal {
+  animation-name: scale;
+  animation-duration: var(--transition-duration-250ms);
+  animation-timing-function: var(--cubic-bezier);
+
+  animation-direction: reverse;
+}
+.backdrop.animate-modal {
+  animation-name: scale;
+  animation-duration: var(--transition-duration-250ms);
+  animation-timing-function: var(--cubic-bezier);
 }
