--- a/css/styles.css
+++ b/css/styles.css
@@ -811,7 +811,7 @@ img {
   pointer-events: none;
   transform: scale3d(0, 0, 0);
 }
-.modal {
+.form-modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -830,6 +830,27 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+.form-modal-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+
+  background-color: var(--main-background-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* opacity: 0; */
+  cursor: pointer;
+}
+.btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 11px;
+  height: 11px;
 }
 /* Подключение Аннимации на Модальное окно */
 @keyframes scale {
