--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ img {
 textarea {
   resize: none;
 }
-/* Скрываем визуально текст */
+/* Скрываем визуально текст и чекбокс*/
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -839,6 +839,15 @@ textarea {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
+.form-modal-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+}
 .form-modal-button {
   position: absolute;
   top: 8px;
@@ -868,28 +877,32 @@ textarea {
   fill: var(--hover-color);
 }
 .form-modal-field {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 28px;
 }
-.form-modal-comments {
-  display: flex;
-  flex-direction: column;
+.form-modal-comments-wrapper {
+  position: relative;
+
   margin-bottom: 20px;
 }
-.form-modal-checkbox {
-  margin-left: auto;
-  margin-right: auto;
+.form-modal-checkbox-wrapper{
+  position: relative;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
   margin-bottom: 30px;
-  text-align: center;
+   
 }
 .form-modal-input,
 .form-modal-textarea {
   margin: 0;
   padding-top: 12px;
   padding-bottom: 12px;
-  padding-left: 16px;
-  padding-right: 16px;
+    padding-right: 16px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -897,22 +910,21 @@ textarea {
   cursor: pointer;
 }
 .form-modal-input {
-  width: 100%;
-  height: 40px;
+  padding-left: 42px;
 }
 .form-modal-textarea {
+  padding-left: 16px;
   width: 100%;
   height: 120px;
 }
-.form-modal-title {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 30px;
-
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
+.form-modal-comments-wrapper .form-modal-label {
+  left: 16px;
 }
+.form-modal-input {
+  width: 100%;
+  height: 40px;
+}
+
 .form-modal-input,
 .form-modal-textarea,
 .form-modal-label {
@@ -924,9 +936,42 @@ textarea {
   letter-spacing: 0.01em;
   color: var(--text-color);
 }
+.form-modal-label {
+  position: absolute;
+  left: 42px;
+  top: 12px;
+}
+
+.form-modal-icon {
+  position: absolute;
+  left: 16px;
+  top: 11px;
+
+  width: 18px;
+  height: 18px;
+}
+
 .form-modal-checkbox-label {
   line-height: 1.71;
   color: var(--text-color);
+}
+/* Cделаем временно подчеркивание для визуализации */
+/* .form-modal-checkbox:checked ~ .form-modal-checkbox-label {
+color: red;
+} */
+.form-modal-checkbox:checked ~ .form-modal-icon-check {
+  border-color: transparent;
+  background-color: var(--hover-color);
+
+  }
+.form-modal-icon-check {
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+
+  border: 2px solid var(--main-title-color);
+  border-radius: 2px;
+  fill: var(--main-write-color);
 }
 .form-modal-link {
   color: var(--hover-color);
