--- a/css/styles.css
+++ b/css/styles.css
@@ -283,12 +283,12 @@ textarea {
 
   transition: background-color var(--transition-duration-250ms)
       var(--cubic-bezier),
-    outline var(--transition-duration-250ms) var(--cubic-bezier);
+      border var(--transition-duration-250ms) var(--cubic-bezier);
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: #2196f3;
-  outline: 1px solid var(--main-write-color);
+  border: 1px solid var(--main-write-color);
 }
 
 /* Секция О нас */
@@ -743,10 +743,9 @@ textarea {
 .footer-social-item > a:focus {
   background-color: var(--hover-color);
 }
-.footer-form {
+/* .footer-form {
   display: flex;
-}
-
+} */
 .footer-form-input {
   margin-right: 12px;
   width: 358px;
@@ -799,7 +798,7 @@ textarea {
 .footer-form-input:hover,
 .footer-form-button:focus,
 .footer-form-input:focus {
-  outline: 2px solid var(--main-write-color);
+  outline: 1px solid var(--main-write-color);
 }
 .footer-form-button .icon {
   margin-left: 10px;
@@ -860,6 +859,8 @@ textarea {
   background-color: var(--main-background-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+
+  transition: border-color var(--transition-duration-250ms) var(--cubic-bezier);
 }
 .btn-close {
   position: absolute;
@@ -875,6 +876,11 @@ textarea {
 .form-modal-button:hover .btn-close,
 .form-modal-button:focus .btn-close {
   fill: var(--hover-color);
+}
+.form-modal-button:focus {
+  outline: none;
+  border-color: var(--hover-color);
+
 }
 .form-modal-field {
   position: relative;
@@ -903,7 +909,7 @@ textarea {
   margin: 0;
   padding-top: 12px;
   padding-bottom: 12px;
-    padding-right: 16px;
+  padding-right: 16px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -970,17 +976,28 @@ textarea {
 }
 .form-modal-input:focus ~ .form-modal-icon,
 .form-modal-input:hover ~ .form-modal-icon,
-.form-modal-input:not(:placeholder-shown) ~ .form-modal-icon
-{
+.form-modal-input:focus:not(:placeholder-shown) ~ .form-modal-icon,
+.form-modal-input:hover:not(:placeholder-shown) ~ .form-modal-icon {
   fill: var(--hover-color);
+}
+
+.form-modal-input:not(:placeholder-shown) ~ .form-modal-icon {
+  fill: inherit;
 }
 .form-modal-input:focus,
 .form-modal-input:hover,
-.form-modal-input:not(:placeholder-shown),
 .form-modal-textarea:focus,
 .form-modal-textarea:hover,
-.form-modal-textarea:not(:placeholder-shown) {
-border-color: var(--hover-color);
+.form-modal-input:focus:not(:placeholder-shown),
+.form-modal-textarea:focus:not(:placeholder-shown),
+.form-modal-input:hover:not(:placeholder-shown),
+.form-modal-textarea:hover:not(:placeholder-shown)  {
+  border-color: var(--hover-color);
+  outline: none;
+}
+.form-modal-textarea:not(:placeholder-shown),
+.form-modal-input:not(:placeholder-shown) {
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 .form-modal-textarea:focus + .form-modal-label,
 .form-modal-textarea:hover + .form-modal-label,
@@ -1020,12 +1037,20 @@ color: red;
   fill: var(--main-write-color);
   cursor: pointer;
   
-  transition: background-color var(--transition-duration-250ms) var(--cubic-bezier),
+  transition: border-color var(--transition-duration-250ms) var(--cubic-bezier),
   background-color var(--transition-duration-250ms) var(--cubic-bezier),
   box-shadow var(--transition-duration-250ms) var(--cubic-bezier) ;
 }
 .form-modal-link {
   color: var(--hover-color);
+
+  transition: border-color var(--transition-duration-250ms) var(--cubic-bezier);
+}
+.form-modal-link:focus {
+  outline: none;
+  border: 1px solid var(--hover-color);
+  border-radius: 2px;
+
 }
 .form-modal-btn {
   display: flex;
@@ -1049,14 +1074,16 @@ color: red;
   border-radius: 4px;
   border-color: transparent;
   cursor: pointer;
-  transition: background-color var(--transition-duration-250ms)
-      var(--cubic-bezier),
-    box-shadow var(--transition-duration-250ms) var(--cubic-bezier);
+  transition: background-color var(--transition-duration-250ms) var(--cubic-bezier),
+              box-shadow var(--transition-duration-250ms) var(--cubic-bezier),
+              border-color var(--transition-duration-250ms) var(--cubic-bezier);
 }
 .form-modal-btn:hover,
 .form-modal-btn:focus {
   background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: var(--hover-color);
+  outline: none;
 }
 
 /* Подключение Аннимации на Модальное окно */
